<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/sort_name"
            android:title="@string/action_sort_name"
            android:orderInCategory="1"
            app:showAsAction="ifRoom" />

        <item android:id="@+id/sort_status"
            android:title="@string/action_sort_status"
            android:orderInCategory="2"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/sort_deadline"
            android:title="@string/action_sort_deadline"
            android:orderInCategory="3"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/sort_createdate"
            android:title="@string/action_sort_create_date"
            android:orderInCategory="4"
            app:showAsAction="ifRoom" />
    </group>
</menu>